[workspace]
  members = [
    "crates/napi_common",
    "crates/napi_allocator",

    "packages/humanize",
    "packages/i18n",
    "packages/security",
    "packages/sqlite3",
  ]
  resolver = '2'

  [workspace.dependencies]
    napi_common = { path = "crates/napi_common" }
    napi_allocator = { path = "crates/napi_allocator" }
    # napi
    napi = "3.8.4"
    napi-derive = "3.5.3"
    napi-build = "2.3.1"

    aes = "0.9.0"
    ctr = "0.10.0"
    dashmap = "6.1.0"
    glob = "0.3.3"
    hex = "0.4.3"
    hybrid-array = "0.4.10"
    lazy_static = "1.5.0"
    mimalloc-rust = "0.2.1"
    once_cell = "1.21.4"
    parking_lot = "0.12.5"
    regex = "1.12.3"
    rusqlite = { version = "0.39.0", features = ["bundled"] }
    serde = { version = "1.0.228", features = ["derive"] }
    serde_json = "1.0.149"
    yaml_serde = "0.10.4"
    tikv-jemallocator = { version = "0.6.1", features = ["disable_initial_exec_tls"] }
    toml = "1.1.2+spec-1.1.0"

[profile.release]
  lto = true
  strip = "symbols"
  codegen-units = 1
  overflow-checks = false
